updates to polybar and rofi

--- a/.config/polybar/Power-Arc/config.ini
+++ b/.config/polybar/Power-Arc/config.ini
@@ -23,8 +23,8 @@ line-color = ${colors.background-alt}
 border-size = 0
 border-color = ${colors.background}
 
-padding-left = 0
-padding-right = 0
+padding-left = 2
+padding-right = 2
 
 module-margin-left = 0
 module-margin-right = 0
@@ -34,9 +34,9 @@ font-1 = Feather:size=12;2
 font-2 = Iosevka Nerd Font:style=Medium:size=19;5
 font-3 = Iosevka Nerd Font:style=Medium:size=32;8
 
-modules-left = dark-right launch blue-right dark-right blue-right workspaces dark-right blue-right
-modules-center = blue-left dark-left date dark-right blue-right
-modules-right = blue-left dark-left eth blue-left dark-left blue-left alsa dark-left blue-left dark-left filesystem blue-left dark-left blue-left cpu dark-left blue-left dark-left memory blue-left
+modules-left = launch blue-right dark-right blue-right workspaces dark-right blue-right
+modules-center = blue-left dark-left dark-right blue-right
+modules-right = blue-left dark-left eth blue-left dark-left blue-left alsa dark-left blue-left dark-left filesystem blue-left dark-left blue-left cpu dark-left blue-left dark-left memory
 
 cursor-click = pointer
 
