--- a/.config/polybar/Power-Arc/modules.ini
+++ b/.config/polybar/Power-Arc/modules.ini
@@ -1,7 +1,7 @@
 [module/launch]
 type = custom/text
 content = 
-content-foreground = ${colors.foreground}
+content-foreground = ${colors.background}
 content-background = ${colors.background-alt}
 content-padding = 2
 click-left = $HOME/.local/bin/rofi5.sh
