--- a/.config/polybar/bluetiful/colors.ini
+++ b/.config/polybar/bluetiful/colors.ini
@@ -4,7 +4,7 @@ background = #00000000
 foreground = #FFFFFF
 foreground-alt = #C7C7C7
 underline = #2F343F
-urgent = #BF616AFF
+urgent = #BF616A
 
 shade1 = #0D47A1
 shade2 = #1565C0
