--- a/.config/polybar/bluetiful/modules.ini
+++ b/.config/polybar/bluetiful/modules.ini
@@ -44,7 +44,7 @@ interval = 5
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <ramp-volume> <label-volume>
-format-volume-background = ${color.shade7}
+format-volume-background = ${color.shade8}
 format-volume-padding = 2
 
 ; Available tags:
@@ -53,7 +53,7 @@ format-volume-padding = 2
 ;   <bar-volume>
 format-muted = <label-muted>
 format-muted-prefix = 
-format-muted-background = ${color.shade7}
+format-muted-background = ${color.shade8}
 format-muted-padding = 2
 
 ; Available tokens:
@@ -76,143 +76,6 @@ ramp-volume-2 = 
 ; Only applies if <ramp-volume> is used
 ramp-headphones-0 = 
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/backlight]
-;type = internal/xbacklight
-type = internal/backlight
-
-; Use the following command to list available cards:
-; $ ls -1 /sys/class/backlight/
-;card = intel_backlight
-card = amdgpu_bl0
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
-;   <bar>
-format = <ramp> <label>
-format-background = ${color.shade2}
-format-padding = 2
-
-; Available tokens:
-;   %percentage% (default)
-label = %percentage%%
-
-; Only applies if <ramp> is used
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/battery]
-type = internal/battery
-
-; This is useful in case the battery never reports 100% charge
-full-at = 99
-
-; Use the following command to list batteries and adapters:
-; $ ls -1 /sys/class/power_supply/
-battery = BAT1
-adapter = ACAD
-
-; If an inotify event haven't been reported in this many
-; seconds, manually poll for new values.
-;
-; Needed as a fallback for systems that don't report events
-; on sysfs/procfs.
-;
-; Disable polling by setting the interval to 0.
-;
-; Default: 5
-poll-interval = 2
-
-; see "man date" for details on how to format the time string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-; Default: %H:%M:%S
-time-format = %H:%M
-
-; Available tags:
-;   <label-charging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-charging>
-format-charging = <animation-charging> <label-charging>
-format-charging-background = ${color.shade5}
-format-charging-padding = 2
-
-; Available tags:
-;   <label-discharging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-discharging>
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-background = ${color.shade5}
-format-discharging-padding = 2
-
-; Available tags:
-;   <label-full> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-format-full = <label-full>
-format-full-prefix = 
-format-full-background = ${color.shade5}
-format-full-padding = 2
-
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current charge rate in watts)
-label-charging = %percentage%%
-
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
-label-discharging = %percentage%%
-
-; Available tokens:
-;   %percentage% (default)
-label-full = " Full"
-
-; Only applies if <ramp-capacity> is used
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
-
-; Only applies if <bar-capacity> is used
-;bar-capacity-width = 10
-
-; Only applies if <animation-charging> is used
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
-animation-charging-6 = 
-
-; Framerate in milliseconds
-animation-charging-framerate = 750
-
-; Only applies if <animation-discharging> is used
-;;animation-discharging-0 = ${battery.anim0}
-;;animation-discharging-1 = ${battery.anim1}
-
-; Framerate in milliseconds
-;animation-discharging-framerate = 500
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;;[module/bspwm]
 ;;type = internal/bspwm
@@ -285,7 +148,6 @@ animation-charging-framerate = 750
 ;;label-focused = %icon%
 ;;label-focused-foreground = #ffffff
 ;;label-focused-background = #3f3f3f
-;;label-focused-underline = #fba922
 
 ; Available tokens:
 ;   %name%
@@ -335,7 +197,6 @@ animation-charging-framerate = 750
 ;;label-separator-padding = 2
 ;;label-separator-foreground = #ffb52a
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/cpu]
 type = internal/cpu
@@ -351,8 +212,9 @@ interval = 1
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = 
-format-background = ${color.shade4}
+format-prefix = 
+;format-prefix = 
+format-background = ${color.shade2}
 format-padding = 2
 
 ; Available tokens:
@@ -370,7 +232,6 @@ label = " %percentage%%"
 ;;ramp-load-0 = ${cpu.load0}
 ;;ramp-load-1 = ${cpu.load1}
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/date]
 type = internal/date
@@ -383,18 +244,18 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time = " %l:%M %P"
+time = "%{T5}%{T-}%l:%M %P"
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
 ;;date-alt = %A, %d %B %Y
-time-alt = " %A, %B %e, %Y"
+time-alt = "%{T5}%{T-} %A, %B %e, %Y"
 
 ; Available tags:
 ;   <label> (default)
 format = <label>
-format-background = ${color.shade3}
-format-padding = 2
+format-background = ${color.background}
+format-padding = 1
 
 ; Available tokens:
 ;   %date%
@@ -402,7 +263,17 @@ format-padding = 2
 ; Default: %date%
 label = %time%
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/dot]
+type = custom/text
+;content = " "
+;content = " "
+content = "│ "
+content-font = 0
+content-background = ${color.background}
+content-foreground = #ffffff
+content-padding = 1
+
 
 [module/filesystem]
 type = internal/fs
@@ -431,7 +302,7 @@ fixed-values = true
 ;   <ramp-capacity>
 format-mounted = <label-mounted>
 format-mounted-prefix = 
-format-mounted-background = ${color.shade5}
+format-mounted-background = ${color.shade6}
 format-mounted-padding = 2
 format-mounted-prefix-font = 1
 
@@ -439,7 +310,7 @@ format-mounted-prefix-font = 1
 ;   <label-unmounted> (default)
 format-unmounted = <label-unmounted>
 format-unmounted-prefix = 
-format-unmounted-background = ${color.shade5}
+format-unmounted-background = ${color.shade6}
 format-unmounted-padding = 2
 format-unmounted-prefix-font = 1
 
@@ -460,149 +331,6 @@ label-mounted = " %percentage_used%%"
 ; Default: %mountpoint% is not mounted
 label-unmounted = " %mountpoint%: not mounted"
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;;[module/github]
-;;type = internal/github
-
-; Accessing an access token stored in file
-;;token = ${file:/path/to/file/containing/github/access.token}
-
-; Accessing an access token stored in an environment variable
-;;token = ${env:GITHUB_ACCESS_TOKEN}
-
-; Whether empty notifications should be displayed or not
-;;empty-notifications = false
-
-; Number of seconds in between requests
-;;interval = 10
-
-; Available tags:
-;   <label> (default)
-;;format = <label>
-;;format-prefix = 
-
-; Available tokens:
-;   %notifications% (default)
-; Default: Notifications: %notifications%
-;;label = %notifications%
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;;[module/i3]
-;;type = internal/i3
-
-; Only show workspaces defined on the same output as the bar
-;
-; Useful if you want to show monitor specific workspaces
-; on different bars
-;
-; Default: false
-;;pin-workspaces = true
-
-; This will split the workspace name on ':'
-; Default: false
-;;strip-wsnumbers = true
-
-; Sort the workspaces by index instead of the default
-; sorting that groups the workspaces by output
-; Default: false
-;;index-sort = true
-
-; Create click handler used to focus workspace
-; Default: true
-;;enable-click = false
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
-;;enable-scroll = false
-
-; Wrap around when reaching the first/last workspace
-; Default: true
-;;wrapping-scroll = false
-
-; Set the scroll cycle direction 
-; Default: true
-;;reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
-;;fuzzy-match = true
-
-; ws-icon-[0-9]+ = label;icon
-; NOTE: The label needs to match the name of the i3 workspace
-;;ws-icon-0 = 1;♚
-;;ws-icon-1 = 2;♛
-;;ws-icon-2 = 3;♜
-;;ws-icon-3 = 4;♝
-;;ws-icon-4 = 5;♞
-;;ws-icon-default = ♟
-; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
-; you must also define a ws-icon-5.
-
-; Available tags:
-;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
-;   <label-mode> (default)
-;;format = <label-state> <label-mode>
-
-; Available tokens:
-;   %mode%
-; Default: %mode%
-;;label-mode = %mode%
-;;label-mode-padding = 2
-;;label-mode-background = #e60053
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-focused = %index%
-;;label-focused-foreground = #ffffff
-;;label-focused-background = #3f3f3f
-;;label-focused-underline = #fba922
-;;label-focused-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-unfocused = %index%
-;;label-unfocused-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-visible = %index%
-;;label-visible-underline = #555555
-;;label-visible-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-urgent = %index%
-;;label-urgent-foreground = #000000
-;;label-urgent-background = #bd2c40
-;;label-urgent-padding = 4
-
-; Separator in between workspaces
-;;label-separator = |
-;;label-separator-padding = 2
-;;label-separator-foreground = #ffb52a
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/memory]
 type = internal/memory
@@ -622,7 +350,8 @@ interval = 1
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix =  
+format-prefix = 
+;format-prefix =  
 format-background = ${color.shade3}
 format-padding = 2
 
@@ -656,7 +385,6 @@ label = " %percentage_used%%"
 ;;ramp-free-1 = ${memory.free1}
 ;;ramp-free-2 = ${memory.free2}
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/mpd]
 type = internal/mpd
@@ -753,9 +481,7 @@ toggle-off-foreground = ${color.background}
 ;;bar-progress-fill = ─
 ;;bar-progress-empty = ─
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
 type = internal/network
 interface = eno1
@@ -798,14 +524,14 @@ unknown-as-up = true
 ;   <label-connected> (default)
 ;   <ramp-signal>
 format-connected = <ramp-signal> <label-connected>
-format-connected-background = ${color.shade6}
+format-connected-background = ${color.shade7}
 format-connected-padding = 2
 
 ; Available tags:
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
 format-disconnected-prefix = 睊
-format-disconnected-background = ${color.shade6}
+format-disconnected-background = ${color.shade7}
 format-disconnected-padding = 2
 
 ; Available tags:
@@ -858,7 +584,6 @@ ramp-signal-2 = 直
 ; Framerate in milliseconds
 ;;animation-packetloss-framerate = 500
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -906,104 +631,26 @@ ramp-volume-0 = 奔
 ramp-volume-1 = 墳
 ramp-volume-2 = 
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/temperature]
 type = internal/temperature
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 0.5
-
-; Thermal zone to use
-; To list all the zone types, run 
-; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
-; Default: 0
 thermal-zone = 0
-
-; Full path of temperature sysfs path
-; Use `sensors` to find preferred temperature source, then run
-; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
-; to find path to desired file
-; Default reverts to thermal zone setting
-;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-hwmon-path = /sys/devices/pci0000:00/0000:00:01.3/0000:01:00.0/hwmon/hwmon0/temp1_input
-
-; Threshold temperature to display warning label (in degrees celsius)
-; Default: 80
-warn-temperature = 65
-
-; Whether or not to show units next to the temperature tokens (°C, °F)
-; Default: true
-units = true
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
-format = <ramp> <label>
-format-background = ${color.shade6}
+warn-temperature = 30
 format-padding = 2
-
-; Available tags:
-;   <label-warn> (default)
-;   <ramp>
-format-warn = <ramp> <label-warn>
-format-warn-background = ${color.shade6}
-format-warn-foreground = ${color.background}
 format-warn-padding = 2
+format = <ramp> <label>
+format-warn = <ramp> <label-warn>
+format-background = ${color.shade5}
 
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
 label = %temperature-f%
+label-warn = %temperature-f%
+label-warn-foreground = ${color.urgent}
 
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
-label-warn = "%temperature-f%"
-
-; Requires the <ramp> tag
-; The icon selection will range from 0 to `warn-temperature`
-; with the current temperature as index.
 ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
+ramp-1 = 
+ramp-2 = 
+ramp-foreground = ${color.foreground}
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/keyboard]
-type = internal/xkeyboard
-
-; List of indicators to ignore
-blacklist-0 = num lock
-blacklist-1 = scroll lock
-
-; Available tags:
-;   <label-layout> (default)
-;   <label-indicator> (default)
-format = <label-layout> <label-indicator>
-format-prefix = 
-format-background = ${color.shade4}
-format-padding = 2
-
-; Available tokens:
-;   %layout%
-;   %name%
-;   %number%
-; Default: %layout%
-label-layout = " %layout%"
-
-; Available tokens:
-;   %name%
-; Default: %name%
-label-indicator-on = %name%
-label-indicator-on-foreground = ${color.foreground}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/title]
 type = internal/xwindow
@@ -1024,7 +671,6 @@ label-maxlen = 75
 ; Used instead of label when there is no window title
 ;;label-empty = Arch Linux
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/workspaces]
 type = internal/xworkspaces
@@ -1055,7 +701,6 @@ icon-2 = 3;❸
 icon-3 = 4;❹
 icon-4 = 5;❺
 icon-default = 
-
 
 ; Available tags:
 ;   <label-monitor>
@@ -1113,17 +758,17 @@ label-urgent-padding = 2
 label-occupied-padding = 2
 label-empty-padding = 2
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/sysmenu]
 type = custom/text
 content = 襤
 content-font = 3
-content-background = ${color.shade2}
+content-background = ${color.shade1}
 content-foreground = ${color.foreground}
 content-padding = 2
 
 click-left = ~/.local/bin/powermenu &
+
 
 [module/launcher]
 type = custom/text
@@ -1143,3 +788,11 @@ click-left = ~/.config/polybar/shades/scripts/launcher.sh
 ; "scroll-(up|down)" will be executed using "/usr/bin/env sh -c $COMMAND"
 ;;scroll-up = ~/.config/polybar/shades/scripts/launcher.sh &
 ;;scroll-down = ~/.config/polybar/shades/scripts/color-switch.sh &
+
+
+[module/weather]
+type = custom/script
+;exec = /home/josh/.config/polybar/bluetiful/weather.sh
+exec = /home/josh/.local/bin/weathernew -i
+tail = false
+interval = 960
