--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -33,8 +33,8 @@ external_editor = "vim"
 progressbar_elapsed_color = "white"
 progressbar_color = "black"
 
-progressbar_look = "  "
-#progressbar_look = "─╴─"
+#progressbar_look = "  "
+progressbar_look = "─╴─"
 #progressbar_look = "▃▃▃"
 #progressbar_look = "─⊙ "
 
@@ -69,8 +69,6 @@ color2 = "black"
 execute_on_song_change = "/home/josh/.config/ncmpcpp/cover.sh"
 #execute_on_song_change = "/home/josh/.config/ncmpcpp/bg.sh"
 
-
-
 #song_list_format = " $7%l  $2%t $R$5%a "
 #song_list_format = "                  $2%a $R$5%t "
 #song_list_format = "{{$2%a$9 - $4%t$9}|{$5%f$9}}{$3%l$9}                "
@@ -84,7 +82,7 @@ song_list_format = "                            $8│ $5%t$9 $4$R%a$9"
 song_status_format = "$b$6 $8%a $6 $8%t $6 $9%b "
 song_window_title_format = " {%a} - {%t}"
 
-# NOTES
+# NOTES #############################################################
 
 # %l - length
 # %f - filename
