--- a/.config/polybar/azul/modules/volume.ini
+++ b/.config/polybar/azul/modules/volume.ini
@@ -12,7 +12,7 @@ format-volume-background = ${colors.nord0}
 label-volume = %{T6}%{F#D8DEE9} %percentage%%%{T-}%{F-}
 
 format-muted = <label-muted>
-format-muted-prefix = %{T5}%{F#BF616A}ﱝ %{T-}%{F-}
+format-muted-prefix = %{T5}%{F#FF6059}ﱝ %{T-}%{F-}
 format-muted-foreground = ${colors.nord11}
 format-muted-background = ${colors.nord0}
 
