--- a/.config/polybar/bluetiful/modules.ini
+++ b/.config/polybar/bluetiful/modules.ini
@@ -792,7 +792,6 @@ click-left = ~/.config/polybar/shades/scripts/launcher.sh
 
 [module/weather]
 type = custom/script
-;exec = /home/josh/.config/polybar/bluetiful/weather.sh
-exec = /home/josh/.local/bin/weathernew -i
+exec = /home/josh/.local/bin/weather -i
 tail = false
 interval = 960
