--- a/.config/polybar/bluetiful/modules.ini
+++ b/.config/polybar/bluetiful/modules.ini
@@ -792,6 +792,6 @@ click-left = ~/.config/polybar/shades/scripts/launcher.sh
 
 [module/weather]
 type = custom/script
-exec = /home/josh/.local/bin/weather -i
+exec = /home/josh/.local/bin/weather1 -i
 tail = false
 interval = 960
