fix polybar, again

--- a/.config/polybar/bluetiful/config.ini
+++ b/.config/polybar/bluetiful/config.ini
@@ -33,6 +33,7 @@ font-1 = "Iosevka Nerd Font:size=14;4"
 font-2 = "Iosevka Nerd Font:style=Bold:size=16;4"
 font-3 = "Iosevka Nerd Font:size=22;4"
 font-4 = "NotoSans Nerd Font:size=12;3"
+font-5 = "Font Awesome 5 Free Solid:size=11;3"
 
 modules-left = launcher workspaces
 ;modules-center = title
