--- a/.config/polybar/bluetiful/modules.ini
+++ b/.config/polybar/bluetiful/modules.ini
@@ -244,7 +244,7 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time = "%{T5}%{T-}%l:%M %P"
+time = "%{T5}%{T-} %l:%M %P"
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
@@ -301,10 +301,11 @@ fixed-values = true
 ;   <bar-used>
 ;   <ramp-capacity>
 format-mounted = <label-mounted>
-format-mounted-prefix = 
+format-mounted-prefix =  
+;format-mounted-prefix = 
 format-mounted-background = ${color.shade6}
 format-mounted-padding = 2
-format-mounted-prefix-font = 1
+format-mounted-prefix-font = 6
 
 ; Available tags:
 ;   <label-unmounted> (default)
@@ -650,7 +651,7 @@ ramp-0 = 
 ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${color.foreground}
-
+ramp-font = 6
 
 [module/title]
 type = internal/xwindow
