re-organize configs

--- a/.config/polybar/bluetiful/config.ini
+++ b/.config/polybar/bluetiful/config.ini
@@ -34,10 +34,11 @@ font-2 = "Iosevka Nerd Font:style=Bold:size=16;4"
 font-3 = "Iosevka Nerd Font:size=22;4"
 font-4 = "NotoSans Nerd Font:size=12;3"
 font-5 = "Font Awesome 5 Free Solid:size=11;3"
+font-6 = "Inconsolata Nerd Font:style=Medium:size=18;4"
 
 modules-left = launcher workspaces
 ;modules-center = title
-modules-center = date dot weather
+modules-center = date separator weather
 modules-right = alsa network filesystem temperature memory cpu sysmenu
 
 separator =
@@ -54,8 +55,8 @@ tray-padding = 0
 tray-scale = 1.0
 enable-ipc = true
 
-cursor-click = 
-cursor-scroll = 
+cursor-click = pointer
+cursor-scroll = ns-resize
 
 [bar/main2]
 inherit = bar/main
