--- a/.config/polybar/bluetiful/colors.ini
+++ b/.config/polybar/bluetiful/colors.ini
@@ -5,7 +5,7 @@ foreground = #FFFFFF
 foreground-alt = #C7C7C7
 underline = #2F343F
 urgent = #BF616A
-
+separator = #5561AFEF
 shade1 = #0D47A1
 shade2 = #1565C0
 shade3 = #1976D2
