--- a/.config/polybar/bluetiful/config.ini
+++ b/.config/polybar/bluetiful/config.ini
@@ -13,7 +13,7 @@ override-redirect = false
 bottom = false
 fixed-center = false
 width = 100%
-height = 30
+height = 26
 offset-x = 0%
 offset-y = 0%
 background = ${color.background}
@@ -28,16 +28,18 @@ padding = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = "JetBrainsMono Nerd Font:size=11;3"
+;font-0 = "JetBrainsMono Nerd Font:size=11;3"
+
+font-0 = "NotoSans Nerd Font:style=Regular:size=12;3"
 font-1 = "Iosevka Nerd Font:size=14;4"
-font-2 = "Iosevka Nerd Font:style=Bold:size=16;4"
+font-2 = "Iosevka Nerd Font:style=Bold:size=16;3"
 font-3 = "Iosevka Nerd Font:size=22;4"
 font-4 = "NotoSans Nerd Font:size=12;3"
 font-5 = "Font Awesome 5 Free Solid:size=11;3"
 font-6 = "Inconsolata Nerd Font:style=Medium:size=18;4"
+font-7 = "NotoSans Nerd Font:size=8;4"
 
-modules-left = launcher workspaces
-;modules-center = title
+modules-left = launcher workspaces mpd
 modules-center = date separator weather
 modules-right = alsa network filesystem temperature memory cpu sysmenu
 
