--- a/.config/polybar/bluetiful/modules.ini
+++ b/.config/polybar/bluetiful/modules.ini
@@ -31,7 +31,7 @@ ramp-headphones-0 = 
 type = internal/cpu
 interval = 1
 format = <label>
-format-prefix = 
+format-prefix = %{T5} %{T-} 
 format-background = ${color.shade2}
 format-padding = 2
 label = " %percentage%%"
@@ -43,6 +43,7 @@ interval = 1.0
 time = "%{T5}%{T-} %l:%M %P"
 time-alt = "%{T5}%{T-} %A, %B %e, %Y"
 format = <label>
+label-font = 6
 format-background = ${color.background}
 format-padding = 1
 label = %time%
@@ -55,7 +56,7 @@ type = custom/text
 content = "│ "
 content-font = 0
 content-background = ${color.background}
-content-foreground = #ffffff
+content-foreground = ${color.shade8}
 content-padding = 1
 
 
@@ -92,34 +93,40 @@ label = " %percentage_used%%"
 
 [module/mpd]
 type = internal/mpd
+host = 127.0.0.1
+port = 6600
 interval = 1
-format-online = <toggle> <label-song>
-format-online-prefix =  🎜
-format-online-background = ${color.shade8}
-format-online-foreground = #2E2E2E
+format-online = <icon-prev>  <toggle>  <icon-next>   <label-song>
 format-online-padding = 2
-
-format-offline = <label-offline>
-format-offline-prefix = 🎜
-format-offline-background = ${color.shade8}
-format-offline-foreground = #2E2E2E
 format-offline-padding = 2
-
-label-song =  "%artist% - %title%"
+format-online-background = ${color.shade7}
+format-online-foreground = ${color.foreground}
+label-song-foreground = ${color.foreground}
+label-song = %{T0}"%title%" %{T8}by %artist%%{T-}
 label-song-maxlen = 50
 label-song-ellipsis = true
 
 label-time = %elapsed% / %total%
-label-offline = " Offline"
 
-icon-play = 喇
-icon-pause = 
-icon-stop = ﭥ
-icon-prev = ﭢ
-icon-next = ﭠ
+label-offline = "MPD is offline"
 
-toggle-on-foreground = ${color.foreground}
-toggle-off-foreground = ${color.background}
+;icon-prev = %{T6}%{T-}
+;icon-stop = %{T6}%{T-}
+;icon-play = %{T6}%{T-}
+;icon-pause = %{T6}%{T-}
+;icon-next = %{T6}%{T-}
+
+icon-prev = %{T7}%{T-}
+icon-stop = %{T7}栗%{T-}
+icon-play = %{T2}%{T-}
+icon-pause = %{T2}%{T-}
+icon-next = %{T7}%{T-}
+
+;icon-prev-foreground = ${colors.dark}
+;icon-stop-foreground = ${colors.dark}
+;icon-play-foreground = ${colors.dark}
+;icon-pause-foreground = ${colors.dark}
+;icon-next-foreground = ${colors.dark}
 
 
 [module/wired-network]
@@ -199,7 +206,7 @@ ramp-0 = 
 ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${color.foreground}
-ramp-font = 6
+ramp-font = 1
 
 [module/title]
 type = internal/xwindow
@@ -220,7 +227,7 @@ enable-scroll = true
 ;icon-1 = 2;❷
 ;icon-2 = 3;❸
 ;icon-3 = 4;❹
-;icon-default = 
+;icon-default = ☺
 
 icon-0 = 1;%{T7}%{T-}
 icon-1 = 2;%{T7}%{T-}
@@ -229,7 +236,7 @@ icon-3 = 4;%{T7}%{T-}
 icon-default = 
 
 format = <label-state>
-format-background = ${color.shade6}
+format-background = ${color.shade4}
 
 label-monitor = %name%
 label-active = %icon%
@@ -267,10 +274,10 @@ click-left = ~/.local/bin/powermenu &
 
 [module/launcher]
 type = custom/text
-content = " %{T4}%{T-} %{T5}Apps%{T-} "
-content-background = ${color.shade4}
+content = " %{T7}%{T-}  %{T5}Apps%{T-} "
+content-background = ${color.shade2}
 content-foreground = ${color.foreground}
-content-padding = 1
+content-padding = 2
 click-left = $HOME/.local/bin/rofilaunch.sh
 
 
