--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,9 @@
 # Default terminal
-set -ag terminal-overrides ",*256color*:Tc"
-set-option -g default-terminal "rxvt-unicode-256color"
+set-option -g default-terminal "tmux-256color"
+set-option -ag terminal-overrides ",*256color*:Tc"
+#set -ag terminal-overrides ",alacritty:RGB"
+#set-option -g default-terminal "tmux-256color"
+#set-option -g default-terminal "screen-256color"
 
 # Use vim key bindings
 set-option -g mode-keys vi
@@ -16,8 +19,8 @@ set-option -g escape-time 0
 set-option -g focus-events on
 
 # History settings
-set-option -g history-limit 10000
-set-option -g history-file $HOME/.config/tmux/tmuxhistory
+set-option -g history-limit 100000
+set-option -g history-file ~/.config/tmux/history
 
 # Activity
 set-option -g monitor-activity on
@@ -38,17 +41,20 @@ set-option -g renumber-windows on
 # No bells at all
 set-option -g bell-action none
 
+# Enable RGB color if running in xterm
+set-option -g -a terminal-overrides ",xterm-256color:Tc"
+
 # Unbind default prefix key
 unbind-key C-b
 
-# Set default prefix key (Control + a)
+# Set default prefix key
 set-option -g prefix C-a
 
 # Bind "C-a C-a" to send "C-a"
 bind-key C-a send-prefix
 
 # Reload configuration
-bind-key r source-file $HOME/.config/tmux/tmux.conf \; display-message "OK! I'm reloaded!"
+bind-key r source-file ~/.tmux.conf \; display-message "OK! I'm reloaded!"
 
 # Switch panes
 bind-key -n M-h select-pane -L
@@ -134,12 +140,8 @@ bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -t '{mouse}' -X 
 bind-key '/' copy-mode \; send-keys "/"
 bind-key '?' copy-mode \; send-keys "?"
 
-# Test copy/paste
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
-bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
-
 # Tmuxline
-source-file $HOME/.config/tmux/.statusline
+source-file $HOME/.config/tmux/.tmuxline
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
