--- a/.config/polybar/bluetiful/colors.ini
+++ b/.config/polybar/bluetiful/colors.ini
@@ -6,6 +6,7 @@ foreground-alt = #C7C7C7
 underline = #2F343F
 urgent = #BF616A
 separator = #5561AFEF
+border = #00000000
 shade1 = #0D47A1
 shade2 = #1565C0
 shade3 = #1976D2
