--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -23,13 +23,13 @@ set unicode_ellipsis true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme solarized
+set colorscheme bluetiful
 
 # Draw the status bar on top of the browser window (default: bottom)
 set status_bar_on_top false
 
 # Draw borders around columns?
-set draw_borders true
+set draw_borders false
 
 # Display the directory name in tabs?
 set dirname_in_tabs true 
@@ -50,13 +50,10 @@ set save_tabs_on_exit true
 set wrap_scroll true
 
 # Column ratio
-set column_ratios 2,2,4
+set column_ratios 2,2,3
 
 # Hidden filter
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
-
-# Color scheme
-set colorscheme bluetiful
 
 # ===================================================================
 # == Local Options
