--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -14,16 +14,16 @@ window:
 
 font:
   normal:
-    family: MesloLGL Nerd Font
-    style: Regular
+    family: InconsolataLGC Nerd Font
+    style: Medium
   bold:
-    family: MesloLGL Nerd Font
+    family: InconsolataLGC Nerd Font
     style: Bold
   italic:
-    family: MesloLGL Nerd Font
+    family: InconsolataLGC Nerd Font
     style: Italic
   bold_italic:
-    family: MesloLGL Nerd Font
+    family: InconsolataLGC Nerd Font
     style: Bold Italic
   size: 12.0
   offset:
